# SoccerTalentTracker

./: .replit  data_manager.py  main.py  postgres_data_manager.py  pyproject.toml  utils.py  visualizations.py
.streamlit/: config.toml
attached_assets/: Pasted-TypeError-agg-function-failed-how-mean-dtype-object-Traceback-File-home-runner-workspace-py-1740498485378.txt  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-Layout-staticPlot-Did-1740523387893.txt  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-layout-Modebar-display-1740519638054.txt
auth/: admin.py  database.py  login.py  session.py
data/: matches.csv  players.csv
pages/: login.py
